--- a/dev/nyt.css
+++ b/dev/nyt.css
@@ -3,12 +3,18 @@ body{
 	margin: 0;
 }
 
-h1, .donut{
+p {
+	width: 750px;
+	font-size: 23pt;
+	margin-top: 500px;
+}
+
+h1, .donut, p{
 	margin-left: 165px;
 }
 
 h1 {
-	margin-top: 500px;
+	margin-top: 100px;
 	font-size: 100pt;
 	margin-bottom: 0px;
 }
