--- a/dev/nyt.css
+++ b/dev/nyt.css
@@ -3,9 +3,12 @@ body{
 	margin: 0;
 }
 
+p, text {
+	font-size: 23pt;
+}
+
 p {
 	width: 750px;
-	font-size: 23pt;
 	margin-top: 500px;
 }
 
@@ -17,4 +20,9 @@ h1 {
 	margin-top: 100px;
 	font-size: 100pt;
 	margin-bottom: 0px;
+}
+
+
+text {
+	fill: white;
 }
