--- a/dev/nyt.css
+++ b/dev/nyt.css
@@ -3,13 +3,13 @@ body{
 	margin: 0;
 }
 
-p, text {
-	font-size: 23pt;
+p{
+	font-size: 9.23pt;
 }
 
 p {
-	width: 750px;
-	margin-top: 500px;
+	width: 300px;
+	margin-top: 100px;
 }
 
 h1, .donut, p{
@@ -17,12 +17,13 @@ h1, .donut, p{
 }
 
 h1 {
-	margin-top: 100px;
-	font-size: 100pt;
+	margin-top: 40px;
+	font-size: 40pt;
 	margin-bottom: 0px;
 }
 
 
 text {
+	font-size: 9.32pt;
 	fill: white;
 }
