--- a/dev/nyt.css
+++ b/dev/nyt.css
@@ -3,7 +3,7 @@ body{
 	margin: 0;
 }
 
-p{
+p, text{
 	font-size: 9.23pt;
 }
 
@@ -24,6 +24,5 @@ h1 {
 
 
 text {
-	font-size: 9.32pt;
 	fill: white;
 }
