--- a/flask/static/css/nyt.css
+++ b/flask/static/css/nyt.css
@@ -1,33 +1,82 @@
-/* line 1, ../sass/nyt.scss */
+/* line 3, ../sass/nyt.scss */
 body {
   font-family: avenir;
   margin: 0;
 }
 
-/* line 6, ../sass/nyt.scss */
+/* line 8, ../sass/nyt.scss */
 p, text {
   font-size: 9.23pt;
 }
 
-/* line 10, ../sass/nyt.scss */
+/* line 12, ../sass/nyt.scss */
 p {
   width: 300px;
   margin-top: 100px;
 }
 
-/* line 15, ../sass/nyt.scss */
+/* line 17, ../sass/nyt.scss */
 h1, .donut, p {
-  margin-left: 165px;
+  margin-left: 80px;
 }
 
-/* line 19, ../sass/nyt.scss */
+/* line 21, ../sass/nyt.scss */
 h1 {
   margin-top: 40px;
   font-size: 40pt;
   margin-bottom: 0px;
 }
 
-/* line 26, ../sass/nyt.scss */
+/* line 27, ../sass/nyt.scss */
 text {
   fill: white;
+}
+
+/* line 35, ../sass/nyt.scss */
+.content {
+  margin: 32pt;
+  height: 640px;
+}
+/* line 39, ../sass/nyt.scss */
+.content svg {
+  width: 100%;
+}
+
+/* line 46, ../sass/nyt.scss */
+svg g#all_years_timeline g.year rect.bg {
+  fill: #efefef;
+  stroke: #fff;
+  stroke-width: 2px;
+}
+/* line 52, ../sass/nyt.scss */
+svg g#all_years_timeline g.year rect.fg {
+  fill: #3D5C95;
+  stroke: #fff;
+  stroke-width: 2px;
+  -webkit-transition-property: fill;
+  -webkit-transition-duration: 0.25s;
+}
+/* line 60, ../sass/nyt.scss */
+svg g#all_years_timeline g.year text.label {
+  font-size: 18px;
+  line-height: 24px;
+  text-anchor: middle;
+  font-weight: 500;
+  fill: #000;
+}
+/* line 68, ../sass/nyt.scss */
+svg g#all_years_timeline g.year text.annotation {
+  font-size: 14px;
+  line-height: 18px;
+  text-anchor: middle;
+  font-weight: 500;
+  fill: #999;
+}
+/* line 77, ../sass/nyt.scss */
+svg g#all_years_timeline g.year:hover rect.bg, svg g#all_years_timeline g.year.active rect.bg {
+  fill: #ccc;
+}
+/* line 81, ../sass/nyt.scss */
+svg g#all_years_timeline g.year:hover rect.fg, svg g#all_years_timeline g.year.active rect.fg {
+  fill: #cc0000;
 }
