--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -14,7 +14,6 @@
                 <h1>Barack Obama</h1>
             </header>
             <div class="content">
-                <svg xmlns="http://www.w3.org/2000/svg" class="donut"></svg>
             </div>
         </div>
 
@@ -27,16 +26,17 @@
         <!-- jQuery CDN with Local Fallback -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/vendor/jquery-2.1.0.min.js') }}"><\/script>')</script>
-        <!-- Underscore -->
-        <!--script src="{{ url_for('static', filename='js/vendor/underscore-min.js') }}"></script-->
+        <!-- Underscore CDN with Local Fallback -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" charset="utf-8"></script>
+        <script>window._ || document.write('<script src="{{ url_for('static', filename='js/vendor/underscore-min.js') }}"><\/script>')</script>
         <!-- Backbone -->
         <!--script src="{{ url_for('static', filename='js/vendor/backbone-min.js') }}"></script-->
         <!-- Plugins -->
         <!--script src="js/plugins.js"></script-->
-        <!-- Main Script -->
-        <!--script src="{{ url_for('static', filename='js/main.js') }}"></script-->
-
+        <!-- D3 Fisheye Plugin -->
         <script src="{{ url_for('static', filename='js/fisheye.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/nyt.js') }}"></script>
+        <!-- Main Scripts -->
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+        <!--script src="{{ url_for('static', filename='js/nyt.js') }}"></script-->
     </body>
 </html>
