--- a/flask/static/css/nyt.css
+++ b/flask/static/css/nyt.css
@@ -1,62 +1,62 @@
-/* line 3, ../sass/nyt.scss */
+/* line 5, ../sass/nyt.scss */
 body {
   font-family: avenir;
   margin: 0;
 }
 
-/* line 8, ../sass/nyt.scss */
+/* line 10, ../sass/nyt.scss */
 p, text {
   font-size: 9.23pt;
 }
 
-/* line 12, ../sass/nyt.scss */
+/* line 14, ../sass/nyt.scss */
 p {
   width: 300px;
   margin-top: 100px;
 }
 
-/* line 17, ../sass/nyt.scss */
+/* line 19, ../sass/nyt.scss */
 h1, .donut, p {
   margin-left: 80px;
 }
 
-/* line 21, ../sass/nyt.scss */
+/* line 23, ../sass/nyt.scss */
 h1 {
   margin-top: 40px;
   font-size: 40pt;
   margin-bottom: 0px;
 }
 
-/* line 27, ../sass/nyt.scss */
+/* line 29, ../sass/nyt.scss */
 text {
   fill: white;
 }
 
-/* line 35, ../sass/nyt.scss */
+/* line 37, ../sass/nyt.scss */
 .content {
   margin: 32pt;
   height: 640px;
 }
-/* line 39, ../sass/nyt.scss */
+/* line 41, ../sass/nyt.scss */
 .content svg {
   width: 100%;
 }
 
-/* line 46, ../sass/nyt.scss */
+/* line 48, ../sass/nyt.scss */
 svg g#all_years_timeline g.year rect.bg {
   fill: #efefef;
   stroke: #fff;
   stroke-width: 2px;
 }
-/* line 52, ../sass/nyt.scss */
+/* line 54, ../sass/nyt.scss */
 svg g#all_years_timeline g.year rect.fg {
-  fill: #3D5C95;
+  fill: #3d5c95;
   stroke: #fff;
   stroke-width: 2px;
   -webkit-transition-property: fill;
   -webkit-transition-duration: 0.25s;
 }
-/* line 60, ../sass/nyt.scss */
+/* line 62, ../sass/nyt.scss */
 svg g#all_years_timeline g.year text.label {
   font-size: 18px;
   line-height: 24px;
@@ -64,7 +64,7 @@ svg g#all_years_timeline g.year text.label {
   font-weight: 500;
   fill: #000;
 }
-/* line 68, ../sass/nyt.scss */
+/* line 70, ../sass/nyt.scss */
 svg g#all_years_timeline g.year text.annotation {
   font-size: 14px;
   line-height: 18px;
@@ -72,11 +72,20 @@ svg g#all_years_timeline g.year text.annotation {
   font-weight: 500;
   fill: #999;
 }
-/* line 77, ../sass/nyt.scss */
+/* line 79, ../sass/nyt.scss */
 svg g#all_years_timeline g.year:hover rect.bg, svg g#all_years_timeline g.year.active rect.bg {
   fill: #ccc;
 }
-/* line 81, ../sass/nyt.scss */
+/* line 83, ../sass/nyt.scss */
 svg g#all_years_timeline g.year:hover rect.fg, svg g#all_years_timeline g.year.active rect.fg {
   fill: #cc0000;
+}
+
+/* line 93, ../sass/nyt.scss */
+div#single_year_timeline .rect {
+  width: 160px;
+  height: 250px;
+  background-color: #3d5c95;
+  color: #fff;
+  overflow: hidden;
 }
