--- a/flask/static/css/nyt.css
+++ b/flask/static/css/nyt.css
@@ -1,91 +1,1 @@
-/* line 5, ../sass/nyt.scss */
-body {
-  font-family: Avenir;
-  margin: 0;
-}
-
-/* line 10, ../sass/nyt.scss */
-p, text {
-  font-size: 9.23pt;
-}
-
-/* line 14, ../sass/nyt.scss */
-p {
-  width: 300px;
-  margin-top: 100px;
-}
-
-/* line 19, ../sass/nyt.scss */
-h1, .donut, p {
-  margin-left: 80px;
-}
-
-/* line 23, ../sass/nyt.scss */
-h1 {
-  margin-top: 40px;
-  font-size: 40pt;
-  margin-bottom: 0px;
-}
-
-/* line 29, ../sass/nyt.scss */
-text {
-  fill: white;
-}
-
-/* line 37, ../sass/nyt.scss */
-.content {
-  margin: 32pt;
-  height: 640px;
-}
-/* line 41, ../sass/nyt.scss */
-.content svg {
-  width: 100%;
-}
-
-/* line 48, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar rect.bg, svg g#month_timeline g.bar rect.bg {
-  fill: #efefef;
-  stroke: #fff;
-  stroke-width: 2px;
-}
-/* line 54, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar rect.fg, svg g#month_timeline g.bar rect.fg {
-  fill: #3D5C95;
-  stroke: #fff;
-  stroke-width: 2px;
-  -webkit-transition-property: fill;
-  -webkit-transition-duration: 0.25s;
-}
-/* line 62, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar text.label, svg g#month_timeline g.bar text.label {
-  font-size: 18px;
-  line-height: 24px;
-  text-anchor: middle;
-  font-weight: 500;
-  fill: #000;
-}
-/* line 70, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar text.annotation, svg g#month_timeline g.bar text.annotation {
-  font-size: 14px;
-  line-height: 18px;
-  text-anchor: middle;
-  font-weight: 500;
-  fill: #999;
-}
-/* line 79, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar:hover rect.bg, svg g#all_years_timeline g.bar.active rect.bg, svg g#month_timeline g.bar:hover rect.bg, svg g#month_timeline g.bar.active rect.bg {
-  fill: #ccc;
-}
-/* line 83, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar:hover rect.fg, svg g#all_years_timeline g.bar.active rect.fg, svg g#month_timeline g.bar:hover rect.fg, svg g#month_timeline g.bar.active rect.fg {
-  fill: #cc0000;
-}
-
-/* line 91, ../sass/nyt.scss */
-div#single_year_timeline .rect {
-  width: 160px;
-  height: 250px;
-  background-color: #3d5c95;
-  color: #fff;
-  overflow: hidden;
-}
+body{font-family:Avenir;margin:0}p,text{font-size:9.23pt}p{width:300px;margin-top:100px}h1,.donut,p{margin-left:80px}h1{margin-top:40px;font-size:40pt;margin-bottom:0px}text{fill:white}.content{margin:32pt;height:640px}.content svg{width:100%}svg g#all_years_timeline g.bar rect.bg,svg g#month_timeline g.bar rect.bg{fill:#efefef;stroke:#fff;stroke-width:2px}svg g#all_years_timeline g.bar rect.fg,svg g#month_timeline g.bar rect.fg{fill:#3D5C95;stroke:#fff;stroke-width:2px;-webkit-transition-property:fill;-webkit-transition-duration:0.25s}svg g#all_years_timeline g.bar text.label,svg g#month_timeline g.bar text.label{font-size:18px;line-height:24px;text-anchor:middle;font-weight:500;fill:#000}svg g#all_years_timeline g.bar text.annotation,svg g#month_timeline g.bar text.annotation{font-size:14px;line-height:18px;text-anchor:middle;font-weight:500;fill:#999}svg g#all_years_timeline g.bar:hover rect.bg,svg g#all_years_timeline g.bar.active rect.bg,svg g#month_timeline g.bar:hover rect.bg,svg g#month_timeline g.bar.active rect.bg{fill:#ccc}svg g#all_years_timeline g.bar:hover rect.fg,svg g#all_years_timeline g.bar.active rect.fg,svg g#month_timeline g.bar:hover rect.fg,svg g#month_timeline g.bar.active rect.fg{fill:#cc0000}div#single_year_timeline{display:none}div#single_year_timeline .rect{width:160px;height:250px;background-color:#3d5c95;color:#fff;overflow:hidden}
