--- a/flask/static/sass/nyt.scss
+++ b/flask/static/sass/nyt.scss
@@ -4,6 +4,9 @@
 $margin: 32pt;
 $fillColor: #3D5C95;
 $fillColorActive: #cc0000;
+$bgColor: #efefef;
+$bgColorActive: #ccc;
+$rectInsideWidth: 360px;
 
 body{
 	font-family: Avenir;
@@ -49,7 +52,7 @@ text {
 svg g#all_years_timeline, svg g#month_timeline {
   g.bar {
     rect.bg {
-      fill: #efefef;
+      fill: $bgColor;
       stroke: #fff;
       stroke-width: 2px;
     }
@@ -80,7 +83,7 @@ svg g#all_years_timeline, svg g#month_timeline {
 
     &:hover, &.active {
       rect.bg {
-        fill: #ccc;
+        fill: $bgColorActive;
       }
 
       rect.fg {
@@ -92,73 +95,128 @@ svg g#all_years_timeline, svg g#month_timeline {
 
 div#single_year_timeline {
   position: relative;
-  background: purple;
+//  background-color: $bgColor;
+  overflow: hidden;
 
   .rect {
     width: 160px;
     height: 250px;
-    background-color: $fillColor;
-    color: #fff;
+    background-color: rgba($fillColor, 0);
+    color: #000;
+    text-shadow: 0 1px 2px #fff;
     overflow: hidden;
     position: absolute;
     left: 0;
     top: 0;
     cursor: pointer;
+    outline: 2px solid #fff;
+//    @include box-shadow(0 4px 8px rgba(#000, 0.25));
+    @include transition-property(background-color);
+    @include transition-duration(0.25s);
+    @include transition-timing-function(ease-in-out);
 
-    .rectInside {
-      width: 400px;
-      padding: 10px;
-      margin: 0 auto;
-      background-color: rgba(#000, 0.50);
-      color: #fff;
+    .rectInside:before, &:after {
+      content: "";
+      width: 100%;
+      height: 100%;
       position: absolute;
-      bottom: 32px;
       left: 0;
       right: 0;
-      margin: auto;
+      top: 0;
+      bottom: 0;
+      @include transition(opacity, 0.25s, ease-in-out);
+      @include background-image(linear-gradient(top, rgba(#000, 0.00), rgba(#000, 0.65)));
+      opacity: 0;
+    }
+
+    &:after {
+      @include background-image(linear-gradient(top, rgba($bgColor, 0.50), rgba($bgColor, 1.0)));
+      opacity: 1.0;
+    }
+
+    .rectInside {
+//      width: 100%;
+      padding: 32px 16px 16px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+//      margin: auto;
       z-index: 1;
-      @include border-radius(8px);
+    }
+
+    h3, p {
+      position: relative;
+      z-index: 1;
+      color: inherit;
+//      min-width: $rectInsideWidth / 2;
+      width: $rectInsideWidth;
     }
 
     h3 {
-      color: inherit;
-      width: 400px;
       font-size: 20px;
-      margin: 0 0 10px;
+      margin: 0 auto 10px;
       line-height: 24px;
       font-weight: 500;
     }
 
     p {
-      width: 400px;
+      padding: 0;
       font-size: 16px;
       line-height: 20px;
       color: inherit;
-      margin: 0;
-      max-height: 36px;
+      margin: 0 auto;
+//      max-height: 42px;
       overflow: hidden;
 //      @include ellipsis;
     }
 
-    img {
-      display: block;
-      max-width: 100%;
-      width: auto;
-      height: auto;
-      margin: 0 auto;
+//    img {
+//      display: block;
+//      max-width: 100%;
+//      width: auto;
+//      height: auto;
+//      margin: 0 auto;
+//    }
+
+    .imgContainer {
+      position: absolute;
+      left:   0;
+      right:  0;
+      top:    0;
+      bottom: 0;
+      z-index: 0;
+      min-width: $rectInsideWidth;
+
+      img {
+        width: auto;
+        height: auto;
+        max-height: 100%;
+        position: absolute;
+        left:   -50%;
+        right:  -50%;
+        top:    0;
+        bottom: 0;
+        margin: auto;
+      }
+
+      img.thumbnail {
+        bottom: 50%;
+      }
     }
 
-    img.xlarge {
-      width: auto;
-      height: auto;
-      max-height: 100%;
-      position: absolute;
-      left:   -50%;
-      right:  -50%;
-//      top:    0;
-      bottom: 0;
-      margin: auto;
-      z-index: 0;
+    &:hover {
+      background-color: $fillColor;
+      color: #fff;
+      text-shadow: 0 1px 2px #000;
+
+      .rectInside:before {
+        opacity: 1.0;
+      }
+
+      &:after {
+        opacity: 0.0;
+      }
     }
   }
 }
