--- a/flask/static/css/nyt.css
+++ b/flask/static/css/nyt.css
@@ -1,62 +1,65 @@
-/* line 11, ../sass/nyt.scss */
+/* line 19, ../sass/nyt.scss */
 body {
   font-family: Avenir;
   margin: 0;
 }
 
-/* line 16, ../sass/nyt.scss */
+/* line 24, ../sass/nyt.scss */
 p, text {
   font-size: 9.23pt;
 }
 
-/* line 20, ../sass/nyt.scss */
+/* line 28, ../sass/nyt.scss */
 p {
   width: 300px;
   margin-top: 100px;
 }
 
-/* line 25, ../sass/nyt.scss */
+/* line 33, ../sass/nyt.scss */
 h1, .donut, p {
   margin-left: 80px;
 }
 
-/* line 29, ../sass/nyt.scss */
+/* line 37, ../sass/nyt.scss */
 h1 {
   margin-top: 40px;
   font-size: 40pt;
   margin-bottom: 0px;
 }
 
-/* line 35, ../sass/nyt.scss */
+/* line 43, ../sass/nyt.scss */
 text {
   fill: white;
 }
 
-/* line 43, ../sass/nyt.scss */
+/* line 51, ../sass/nyt.scss */
 .content {
   margin: 32pt;
   height: 640px;
 }
-/* line 47, ../sass/nyt.scss */
+/* line 55, ../sass/nyt.scss */
 .content svg {
   width: 100%;
 }
 
-/* line 54, ../sass/nyt.scss */
-svg g#all_years_timeline g.bar rect.bg, svg g#month_timeline g.bar rect.bg {
-  fill: #efefef;
-  stroke: #fff;
+/* line 62, ../sass/nyt.scss */
+svg g#all_years_timeline g.bar rect, svg g#month_timeline g.bar rect {
+  stroke: white;
   stroke-width: 2px;
 }
-/* line 60, ../sass/nyt.scss */
+/* line 67, ../sass/nyt.scss */
+svg g#all_years_timeline g.bar rect.bg, svg g#month_timeline g.bar rect.bg {
+  fill: #efefef;
+  stroke: white;
+  stroke-width: 2px;
+}
+/* line 73, ../sass/nyt.scss */
 svg g#all_years_timeline g.bar rect.fg, svg g#month_timeline g.bar rect.fg {
   fill: #3d5c95;
-  stroke: #fff;
-  stroke-width: 2px;
   -webkit-transition-property: fill;
   -webkit-transition-duration: 0.25s;
 }
-/* line 68, ../sass/nyt.scss */
+/* line 79, ../sass/nyt.scss */
 svg g#all_years_timeline g.bar text.label, svg g#month_timeline g.bar text.label {
   font-size: 18px;
   line-height: 24px;
@@ -64,41 +67,41 @@ svg g#all_years_timeline g.bar text.label, svg g#month_timeline g.bar text.label
   font-weight: 500;
   fill: #000;
 }
-/* line 76, ../sass/nyt.scss */
+/* line 87, ../sass/nyt.scss */
 svg g#all_years_timeline g.bar text.annotation, svg g#month_timeline g.bar text.annotation {
   font-size: 14px;
   line-height: 18px;
   text-anchor: middle;
   font-weight: 500;
-  fill: #999;
+  fill: #999999;
 }
-/* line 85, ../sass/nyt.scss */
+/* line 96, ../sass/nyt.scss */
 svg g#all_years_timeline g.bar:hover rect.bg, svg g#all_years_timeline g.bar.active rect.bg, svg g#month_timeline g.bar:hover rect.bg, svg g#month_timeline g.bar.active rect.bg {
   fill: #cccccc;
 }
-/* line 89, ../sass/nyt.scss */
+/* line 100, ../sass/nyt.scss */
 svg g#all_years_timeline g.bar:hover rect.fg, svg g#all_years_timeline g.bar.active rect.fg, svg g#month_timeline g.bar:hover rect.fg, svg g#month_timeline g.bar.active rect.fg {
   fill: #cc0000;
 }
 
-/* line 96, ../sass/nyt.scss */
+/* line 107, ../sass/nyt.scss */
 div#single_year_timeline {
   position: relative;
   overflow: hidden;
 }
-/* line 101, ../sass/nyt.scss */
+/* line 112, ../sass/nyt.scss */
 div#single_year_timeline .rect {
   width: 160px;
   height: 250px;
-  background-color: rgba(61, 92, 149, 0);
-  color: #000;
-  text-shadow: 0 1px 2px #fff;
+  background-color: #efefef;
+  color: #666;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0);
   overflow: hidden;
   position: absolute;
   left: 0;
   top: 0;
   cursor: pointer;
-  outline: 2px solid #fff;
+  outline: 2px solid white;
   -webkit-transition-property: background-color;
   -moz-transition-property: background-color;
   -o-transition-property: background-color;
@@ -112,7 +115,7 @@ div#single_year_timeline .rect {
   -o-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
 }
-/* line 118, ../sass/nyt.scss */
+/* line 129, ../sass/nyt.scss */
 div#single_year_timeline .rect .rectInside:before, div#single_year_timeline .rect:after {
   content: "";
   width: 100%;
@@ -122,10 +125,6 @@ div#single_year_timeline .rect .rectInside:before, div#single_year_timeline .rec
   right: 0;
   top: 0;
   bottom: 0;
-  -webkit-transition: opacity, 0.25s, ease-in-out;
-  -moz-transition: opacity, 0.25s, ease-in-out;
-  -o-transition: opacity, 0.25s, ease-in-out;
-  transition: opacity, 0.25s, ease-in-out;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.65)));
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.65));
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.65));
@@ -133,7 +132,7 @@ div#single_year_timeline .rect .rectInside:before, div#single_year_timeline .rec
   background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.65));
   opacity: 0;
 }
-/* line 132, ../sass/nyt.scss */
+/* line 142, ../sass/nyt.scss */
 div#single_year_timeline .rect:after {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(239, 239, 239, 0.5)), color-stop(100%, #efefef));
   background-image: -webkit-linear-gradient(top, rgba(239, 239, 239, 0.5), #efefef);
@@ -142,7 +141,7 @@ div#single_year_timeline .rect:after {
   background-image: linear-gradient(top, rgba(239, 239, 239, 0.5), #efefef);
   opacity: 1.0;
 }
-/* line 137, ../sass/nyt.scss */
+/* line 147, ../sass/nyt.scss */
 div#single_year_timeline .rect .rectInside {
   padding: 32px 16px 16px;
   position: absolute;
@@ -151,30 +150,35 @@ div#single_year_timeline .rect .rectInside {
   right: 0;
   z-index: 1;
 }
-/* line 148, ../sass/nyt.scss */
-div#single_year_timeline .rect h3, div#single_year_timeline .rect p {
+/* line 158, ../sass/nyt.scss */
+div#single_year_timeline .rect h3, div#single_year_timeline .rect p, div#single_year_timeline .rect cite {
+  display: block;
   position: relative;
   z-index: 1;
   color: inherit;
-  width: 360px;
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 20px;
+  width: 320px;
 }
-/* line 156, ../sass/nyt.scss */
+/* line 170, ../sass/nyt.scss */
 div#single_year_timeline .rect h3 {
   font-size: 20px;
-  margin: 0 auto 10px;
   line-height: 24px;
   font-weight: 500;
 }
-/* line 163, ../sass/nyt.scss */
+/* line 176, ../sass/nyt.scss */
 div#single_year_timeline .rect p {
   padding: 0;
-  font-size: 16px;
-  line-height: 20px;
-  color: inherit;
-  margin: 0 auto;
-  overflow: hidden;
+  /* A magic number that limits the snippet to 3 lines of text */
+  max-height: 60px;
+  overflow-y: hidden;
 }
-/* line 182, ../sass/nyt.scss */
+/* line 183, ../sass/nyt.scss */
+div#single_year_timeline .rect cite {
+  font-size: 14px;
+}
+/* line 195, ../sass/nyt.scss */
 div#single_year_timeline .rect .imgContainer {
   position: absolute;
   left: 0;
@@ -182,9 +186,9 @@ div#single_year_timeline .rect .imgContainer {
   top: 0;
   bottom: 0;
   z-index: 0;
-  min-width: 360px;
+  min-width: 320px;
 }
-/* line 191, ../sass/nyt.scss */
+/* line 204, ../sass/nyt.scss */
 div#single_year_timeline .rect .imgContainer img {
   width: auto;
   height: auto;
@@ -196,21 +200,21 @@ div#single_year_timeline .rect .imgContainer img {
   bottom: 0;
   margin: auto;
 }
-/* line 203, ../sass/nyt.scss */
+/* line 216, ../sass/nyt.scss */
 div#single_year_timeline .rect .imgContainer img.thumbnail {
   bottom: 50%;
 }
-/* line 208, ../sass/nyt.scss */
+/* line 221, ../sass/nyt.scss */
 div#single_year_timeline .rect:hover {
   background-color: #3d5c95;
   color: #fff;
   text-shadow: 0 1px 2px #000;
 }
-/* line 213, ../sass/nyt.scss */
+/* line 226, ../sass/nyt.scss */
 div#single_year_timeline .rect:hover .rectInside:before {
   opacity: 1.0;
 }
-/* line 217, ../sass/nyt.scss */
+/* line 230, ../sass/nyt.scss */
 div#single_year_timeline .rect:hover:after {
   opacity: 0.0;
 }
