--- a/flask/static/sass/nyt.scss
+++ b/flask/static/sass/nyt.scss
@@ -106,8 +106,8 @@ div#single_year_timeline {
   overflow: hidden;
 
   .rect {
-    width: 160px;
-    height: 250px;
+    width: 156px;
+    height: 246px;
     background-color: $bgColor;
     color: #666;
     text-shadow: 0 1px 2px rgba(#000, 0);
@@ -116,11 +116,11 @@ div#single_year_timeline {
     left: 0;
     top: 0;
     cursor: pointer;
-    outline: 2px solid $borderColor;
+    border: 2px solid $borderColor;
 //    @include box-shadow(0 4px 8px rgba(#000, 0.25));
-    @include transition-property(background-color);
-    @include transition-duration(0.25s);
-    @include transition-timing-function(ease-in-out);
+//    @include transition-property(background-color);
+//    @include transition-duration(0.25s);
+//    @include transition-timing-function(ease-in-out);
 
     .rectInside:before, &:after {
       content: "";
@@ -131,8 +131,11 @@ div#single_year_timeline {
       right: 0;
       top: 0;
       bottom: 0;
-      @include background-image(linear-gradient(top, rgba(#000, 0.00), rgba(#000, 0.65)));
+      @include background-image(linear-gradient(top, rgba($bgColor, 0.00), rgba($bgColor, 0.5)));
       opacity: 0;
+//      @include transition-property(opacity);
+//      @include transition-duration(0.25s);
+//      @include transition-timing-function(ease-in-out);
     }
 
     &:after {
@@ -142,16 +145,18 @@ div#single_year_timeline {
 
     .rectInside {
 //      width: 100%;
-      padding: 32px 16px 16px;
+      padding: 32px 12px 12px;
       position: absolute;
       bottom: 0;
       left: 0;
       right: 0;
 //      margin: auto;
       z-index: 1;
+//      -webkit-transform: translate3d(0, 0, 0);
     }
 
     h3, p, cite {
+      padding: 0 4px;
       display: block;
       position: relative;
       z-index: 1;
@@ -170,23 +175,14 @@ div#single_year_timeline {
     }
 
     p {
-      padding: 0;
       /* A magic number that limits the snippet to 3 lines of text */
-      max-height: 60px;
+      max-height: 62px;
       overflow-y: hidden;
     }
 
     cite {
       font-size: 14px;
     }
-
-//    img {
-//      display: block;
-//      max-width: 100%;
-//      width: auto;
-//      height: auto;
-//      margin: 0 auto;
-//    }
 
     .imgContainer {
       position: absolute;
@@ -198,33 +194,51 @@ div#single_year_timeline {
       min-width: $rectInsideWidth;
 
       img {
-        width: auto;
+        width: 540px;
         height: auto;
-        max-height: 100%;
         position: absolute;
         left:   -50%;
         right:  -50%;
         top:    0;
-        bottom: 0;
+//        bottom: 0;
         margin: auto;
       }
 
-      img.thumbnail {
-        bottom: 50%;
+      &.thumbnail img {
+        width: auto;
+        top: 12.5%;
       }
     }
 
     &:hover {
-      background-color: $fillColor;
       color: #fff;
-      text-shadow: 0 1px 2px #000;
+      text-shadow: 0 0 2px rgba(#000, 0.65);
+//      color: #000;
+      background-color: $fillColor;
+//      color: #000;
+//      text-shadow: 0 1px 2px #000;
 
-      .rectInside:before {
-        opacity: 1.0;
-      }
+//      .rectInside:before {
+//        @include background-image(linear-gradient(top, rgba(#000, 0.00), rgba(#000, 0.5)));
+//        opacity: 1.0;
+//      }
 
       &:after {
         opacity: 0.0;
+      }
+    }
+
+    &:hover .imgContainer:not(.thumbnail) img {
+      opacity: 0.85;
+    }
+
+    &:hover .imgContainer:not(.thumbnail) + .rectInside {
+      color: #fff;
+      text-shadow: 0 0 2px rgba(#000, 0.65);
+
+      &:before {
+        @include background-image(linear-gradient(top, rgba(#000, 0.00), rgba(#000, 0.5)));
+        opacity: 1.0;
       }
     }
   }
